--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,9 +9,22 @@
 }
 
 #chat {
-    height: 90%;
+    height: 88%;
     width: 100%;
     overflow-y: auto;
+}
+
+#test { 
+    width: 80%;
+    height: 40px;
+    border-radius: 0;
+    border: 1px solid gray;
+    outline-style: none;
+}
+
+#submitBtn {
+    width: 60px;
+    height: 40px;
 }
 
 .connect {
